# movie-recommendation-system

./: README.md  pyproject.toml
src/compare/: compare_rag.py  streamlit_app.py
src/movie_recommender/: api.py  app.py  ingest.py  rag.py  search.py
src/neo4j/: ingest.py
