[project]
name = "movie-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.109.2",
    "black>=26.5.1",
    "fastapi>=0.137.1",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-huggingface>=1.2.2",
    "langchain-neo4j>=0.10.0",
    "langchain-qdrant>=1.1.0",
    "neo4j>=6.2.0",
    "neo4j-graphrag>=1.18.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "torchvision>=0.27.1",
    "tqdm>=4.68.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
